--- a/package.json
+++ b/package.json
@@ -6,18 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "DOTENV_CONFIG_PATH=./.env.local graphql-codegen -r dotenv/config --config shopify/codegen.json"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "graphql": "^15.5.3",
     "next": "11.1.2",
     "next-seo": "^4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.2.0",
+    "@graphql-codegen/schema-ast": "^2.2.0",
+    "@graphql-codegen/typescript": "^2.2.1",
+    "@graphql-codegen/typescript-operations": "^2.1.3",
     "@types/react": "17.0.20",
+    "autoprefixer": "^10.3.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.14",
     "typescript": "4.4.2"
   }
 }
