--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "graphql": "^15.5.3",
+    "js-cookie": "^3.0.1",
     "next": "11.1.2",
     "next-seo": "^4.26.0",
     "react": "17.0.2",
