--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "11.1.2",
     "next-seo": "^4.26.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.2.0",
