--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-seo": "^4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-slick": "^0.28.1"
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.2.0",
